fixing styles on header visibility button

--- a/components/canvas/dali_canvas/_canvas.scss
+++ b/components/canvas/dali_canvas/_canvas.scss
@@ -12,6 +12,9 @@
   height: 100%;
 }
 
+.margin-left{
+  margin-left: 15px !important;
+}
 .innercanvas {
   height: 100%;
   background-color: white;
